# ParticleFilter

./: .gitignore  CMakeLists.txt  README.md  occGridGaussian.m  occupancyGrid.m
config/: params.cfg  params.cfg.orig  paramssinlge.cfg
data/field_data/: .9-25-16_15degree_odom-filtered.txt.swp  .9-25-16_15degree_scan.txt.swp  .~lock.README.docx#  9-25-16_15degree_GPS-UTM.txt  README.txt
data/results/: crosstrack_err_3.csv  cte.m
include/: log.h  map.h  motion_model.h  particle_state.h  robot_state.h  sampler.h  sensor_model.h  standard_includes.h  util_functions.h
matlab_code/: displayScanData.m  loadScanData.m  main_Scan.m  makeGIF.m  makeHistograms.m  plotMeasurementModel.m
src/: log.cpp  map.cpp  map.cpp.orig  motion_model.cpp  particle_state.cpp  robot_state.cpp  run_test.cpp  run_test.cpp.orig  run_test_parallel.cpp  run_test_single_particle.cpp  sampler.cpp  sampler.cpp.orig  sensor_model.cpp  test.cpp  test_raytrace.cpp  util_functions.cpp
utils/: visualize_map.m
